--- a/website/why-metabake/metabake-vs-hugo/dat.yaml
+++ b/website/why-metabake/metabake-vs-hugo/dat.yaml
@@ -1,15 +1,11 @@
 basedir: ../../
-
 ROOT: '/'
-
-pageTitleTop: Lorem ipsum dolor sit amet
-
 pretty: true
 
-pageTitle: Metabake - Why Metabake
-title: This product is great for CEO
+pageTitle: Metabake - Metabake versus Hugo
+title: Metabake versus Hugo
 image: >-
-  https://scontent-frx5-1.cdninstagram.com/vp/854e9db2929fe6bc50974f29a1682e9b/5C43A90C/t51.2885-15/e35/42115761_1624273044414819_8394293278859251262_n.jpg
-content_text: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-comment: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-keywords: HTML,CSS,XML,JavaScript
+  http://www.metabake.net/assets/img/slide-3.jpg
+content_text: Metabake offers a convenient build with easy features to use, more than Hugo supports.
+comment: Metabake manages dynamism well, with a growing website content
+keywords: Metabake versus Hugo, hugo
