--- a/website/about/about/dat.yaml
+++ b/website/about/about/dat.yaml
@@ -1,15 +1,11 @@
 basedir: ../../
-
 ROOT: '/'
-
-pageTitleTop: Lorem ipsum dolor sit amet
-
 pretty: true
 
 pageTitle: Metabake - About Us
-title: This is great for tech lead and researchers
+title: Metabake is the extensible low-code productivity tool that simplifies the process for building great software
 image: >-
-  https://scontent-frx5-1.cdninstagram.com/vp/854e9db2929fe6bc50974f29a1682e9b/5C43A90C/t51.2885-15/e35/42115761_1624273044414819_8394293278859251262_n.jpg
-content_text: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-comment: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-keywords: HTML5,CSS3
+  http://www.metabake.net/assets/img/slide-3.jpg
+content_text: Metabake is a low-code platform that simplifies the process for building of great software. It is easy to use, navigate, and edit. Metabake allows you to reduce your overall cost of development. Metabake allows different levels and types of developers within your organization to be able to build applications. So you don't need to have only expensive developers building your applications. The Metabake low-code platform allows you to build six to ten times faster than traditional development, and this is because we're not creating code. Metabake allows for visually modeling an application and encompassing the full application life cycle. Everything from designing, development, and deployment is all handled within the platform.
+comment: Metabake is the extensible low-code productivity tool that simplifies the process for building great software
+keywords: low-code, building, software, about
