--- a/website/about/support/dat.yaml
+++ b/website/about/support/dat.yaml
@@ -1,15 +1,11 @@
 basedir: ../../
-
 ROOT: '/'
-
-pageTitleTop: Lorem ipsum dolor sit amet
-
 pretty: true
 
 pageTitle: Metabake - Support
-title: This is great for tech lead and researchers
+title: For inquiries, support and custom requests, we would love to have you reach out to us and we will be available to chat with you.
 image: >-
-  https://scontent-frx5-1.cdninstagram.com/vp/854e9db2929fe6bc50974f29a1682e9b/5C43A90C/t51.2885-15/e35/42115761_1624273044414819_8394293278859251262_n.jpg
-content_text: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-comment: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-keywords: HTML5,CSS3
+  http://www.metabake.net/assets/img/slide-3.jpg
+content_text: The Metabake low-code platform allows you to build six to ten times faster than traditional development, and this is because we're not creating code. Metabake allows for visually modeling an application and encompassing the full application life cycle. Everything from designing, development, and deployment is all handled within the platform.
+comment: Support Metabake
+keywords: Support Metabake
