--- a/website/terms/dat.yaml
+++ b/website/terms/dat.yaml
@@ -1,15 +1,11 @@
 basedir: ../
-
 ROOT: '/'
-
-pageTitleTop: Lorem ipsum dolor sit amet
-
 pretty: true
 
-pageTitle: Metabake - Get Started
-title: This product is great for CEO
+pageTitle: Metabake - Terms
+title: Terms of Use
 image: >-
-  https://scontent-frx5-1.cdninstagram.com/vp/854e9db2929fe6bc50974f29a1682e9b/5C43A90C/t51.2885-15/e35/42115761_1624273044414819_8394293278859251262_n.jpg
-content_text: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-comment: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-keywords: HTML,CSS,XML,JavaScript
+  http://www.metabake.net/assets/img/slide-3.jpg
+content_text: Metabake (“Metabake” “we” “us” or “our”) operates a website located at www.metabake.org (the “website”) from which users can gather information concerning news and services provided by Metabake.
+comment: Last Updated January 1, 2019
+keywords: Metabake Terms
