--- a/website/who-benefits/dat.yaml
+++ b/website/who-benefits/dat.yaml
@@ -1,15 +1,11 @@
 basedir: ../
-
 ROOT: '/'
-
-pageTitleTop: Lorem ipsum dolor sit amet
-
 pretty: true
 
 pageTitle: Metabake - Who Benefits
-title: This product is great for CEO
+title: Who Benefits?
 image: >-
-  https://scontent-frx5-1.cdninstagram.com/vp/854e9db2929fe6bc50974f29a1682e9b/5C43A90C/t51.2885-15/e35/42115761_1624273044414819_8394293278859251262_n.jpg
-content_text: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-comment: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-keywords: HTML,CSS,XML,JavaScript
+  http://www.metabake.net/assets/img/slide-3.jpg
+content_text: Metabake comes with many features and benefits for various individuals in the technology field and more specifically as it relates to and involves application development, either for desktop web or for mobile compatibility.
+comment: It offers exclusive benefit of interest to new web or software developers, technological officers, lead technologists, vice presidents of engineering departments, and other users of the productive, output interface.
+keywords: Metabake benefits, Metabake low-code benefits
