--- a/website/why-metabake/metabake-vs-other-low-code/dat.yaml
+++ b/website/why-metabake/metabake-vs-other-low-code/dat.yaml
@@ -1,15 +1,11 @@
 basedir: ../../
-
 ROOT: '/'
-
-pageTitleTop: Lorem ipsum dolor sit amet
-
 pretty: true
 
-pageTitle: Metabake - Why Metabake
-title: This product is great for CEO
+pageTitle: Metabake - Metabake versus Other Low-Code Platforms
+title: Metabake versus Other Low-Code Platforms
 image: >-
-  https://scontent-frx5-1.cdninstagram.com/vp/854e9db2929fe6bc50974f29a1682e9b/5C43A90C/t51.2885-15/e35/42115761_1624273044414819_8394293278859251262_n.jpg
-content_text: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-comment: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-keywords: HTML,CSS,XML,JavaScript
+  http://www.metabake.net/assets/img/slide-3.jpg
+content_text: Metabake is a low-code programming for static generation such as Markdown, Pugs, etc. with an inclusion of dynamic data binding.
+comment: Metabake, or mBake, as some prefer to call it, is specifically built and customized for developers; it is not a gui. We give the chance to let you use a text editor to build your content and code in a more customized build that is suitable for your usability. It enhances front-end software app development.
+keywords: Metabake versus, Low-Code Platforms
