--- a/website/why-metabake/metabake-vs-other-low-code/dat.yaml
+++ b/website/why-metabake/metabake-vs-other-low-code/dat.yaml
@@ -1,6 +1,7 @@
 basedir: ../../
 ROOT: '/'
 pretty: true
+home: 'home'
 
 pageTitle: Metabake - Metabake versus Other Low-Code Platforms
 title: Metabake versus Other Low-Code Platforms
