--- a/website/about/about/dat.yaml
+++ b/website/about/about/dat.yaml
@@ -1,6 +1,7 @@
 basedir: ../../
 ROOT: '/'
 pretty: true
+home: ''
 
 pageTitle: Metabake - About Us
 title: Metabake is the extensible low-code productivity tool that simplifies the process for building great software
