--- a/website/about/support/dat.yaml
+++ b/website/about/support/dat.yaml
@@ -1,6 +1,7 @@
 basedir: ../../
 ROOT: '/'
 pretty: true
+home: ''
 
 pageTitle: Metabake - Support
 title: For inquiries, support and custom requests, we would love to have you reach out to us and we will be available to chat with you.
