--- a/website/get-started/dat.yaml
+++ b/website/get-started/dat.yaml
@@ -1,6 +1,7 @@
 basedir: ../
 ROOT: '/'
 pretty: true
+home: ''
 
 pageTitle: Metabake - Get Started
 title: Metabake is the extensible low-code productivity tool that simplifies the process for building great software.
