--- a/website/why-metabake/why-metabake/dat.yaml
+++ b/website/why-metabake/why-metabake/dat.yaml
@@ -1,6 +1,7 @@
 basedir: ../../
 ROOT: '/'
 pretty: true
+home: ''
 
 pageTitle: Metabake - Why Metabake
 title: Metabake's goal is high development productivity, efficiency and effectiveness
