--- a/doc/_doc3/mkdocs.yml
+++ b/doc/_doc3/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Meta Docs
-site_url: http://Metabake.net
-repo_url: http://Metabake.net
+site_url: http://MetaBake.org
+repo_url: http://MetaBake.org
 pages:
    - Home: index.md
 
