--- a/meta-website/ZDOC/dat.yaml
+++ b/meta-website/ZDOC/dat.yaml
@@ -1,7 +1,6 @@
-basedir: ../../
+basedir: ../
 
-pretty: false
-home: ''
+pretty: true
 
 pageTitle: Metabake - About Us
 title: Metabake is the extensible low-code productivity tool that simplifies the process for building great software
