--- a/meta-website/about/contact/dat.yaml
+++ b/meta-website/about/contact/dat.yaml
@@ -3,10 +3,10 @@ basedir: ../../
 pretty: false
 home: ''
 
-pageTitle: Metabake - Contact Us
+pageTitle: MetaBake - Contact Us
 title: Lorem Ipsum
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
 content_text: Contact us
 comment: Contact us
-keywords: contact us, form, contact metabake
+keywords: contact us, form, contact MetaBake
