--- a/meta-website/landing/why-metabake/dat.yaml
+++ b/meta-website/landing/why-metabake/dat.yaml
@@ -3,10 +3,10 @@ basedir: ../../
 pretty: false
 home: ''
 
-pageTitle: Metabake - Why Metabake
-title: Metabake's goal is high development productivity, efficiency and effectiveness
+pageTitle: MetaBake - Why MetaBake
+title: MetaBake's goal is high development productivity, efficiency and effectiveness
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
-content_text: Metabake is a smart way of creating user-effective front-end web and application development, using low-code programming. Instead of creating a web application from scratch that can be strenuous, and time-consuming, people decide to use Metabake as the perfect developer’s choice that has been built only to be edited and customized for special use according to a client’s demand.
-comment: Metabake is the extensible low-code productivity tool that simplifies the process for building great software
-keywords: extensible, metabake, low-code, software, web development, Why Metabake
+content_text: MetaBake is a smart way of creating user-effective front-end web and application development, using low-code programming. Instead of creating a web application from scratch that can be strenuous, and time-consuming, people decide to use MetaBake as the perfect developer’s choice that has been built only to be edited and customized for special use according to a client’s demand.
+comment: MetaBake is the extensible low-code productivity tool that simplifies the process for building great software
+keywords: extensible, MetaBake, low-code, software, web development, Why MetaBake
