--- a/meta-website/legal/terms/dat.yaml
+++ b/meta-website/legal/terms/dat.yaml
@@ -3,10 +3,10 @@ basedir: ../../
 pretty: false
 home: ''
 
-pageTitle: Metabake - Terms
+pageTitle: MetaBake - Terms
 title: Terms of Use
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
-content_text: Metabake (“Metabake” “we” “us” or “our”) operates a website located at www.metabake.org (the “website”) from which users can gather information concerning news and services provided by Metabake.
+content_text: MetaBake (“MetaBake” “we” “us” or “our”) operates a website located at www.MetaBake.org (the “website”) from which users can gather information concerning news and services provided by MetaBake.
 comment: Last Updated January 1, 2019
-keywords: Metabake Terms
+keywords: MetaBake Terms
