--- a/meta-website/about/support/dat.yaml
+++ b/meta-website/about/support/dat.yaml
@@ -3,10 +3,10 @@ basedir: ../../
 pretty: false
 home: ''
 
-pageTitle: Metabake - Support
+pageTitle: MetaBake - Support
 title: For inquiries, support and custom requests, we would love to have you reach out to us and we will be available to chat with you.
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
-content_text: The Metabake low-code platform allows you to build six to ten times faster than traditional development, and this is because we're not creating code. Metabake allows for visually modeling an application and encompassing the full application life cycle. Everything from designing, development, and deployment is all handled within the platform.
-comment: Support Metabake
-keywords: Support Metabake
+content_text: The MetaBake low-code platform allows you to build six to ten times faster than traditional development, and this is because we're not creating code. MetaBake allows for visually modeling an application and encompassing the full application life cycle. Everything from designing, development, and deployment is all handled within the platform.
+comment: Support MetaBake
+keywords: Support MetaBake
