--- a/meta-website/get-started/dat.yaml
+++ b/meta-website/get-started/dat.yaml
@@ -3,10 +3,10 @@ basedir: ../
 pretty: false
 home: ''
 
-pageTitle: Metabake - Get Started
-title: Metabake is the extensible low-code productivity tool that simplifies the process for building great software.
+pageTitle: MetaBake - Get Started
+title: MetaBake is the extensible low-code productivity tool that simplifies the process for building great software.
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
-content_text: Metabake mbake CLI lets you generate websites and dynamic webapps in Pug by leveraging low-code pillars for high development productivity.
+content_text: MetaBake mbake CLI lets you generate websites and dynamic webapps in Pug by leveraging low-code pillars for high development productivity.
 comment: Install, First Page
-keywords: Metabake install, metabake get started
+keywords: MetaBake install, MetaBake get started
