--- a/meta-website/landing/metabake-vs-gulp-and-grunt/dat.yaml
+++ b/meta-website/landing/metabake-vs-gulp-and-grunt/dat.yaml
@@ -3,10 +3,10 @@ basedir: ../../
 pretty: false
 home: 'home'
 
-pageTitle: Metabake - Metabake versus Gulp and Grunt
-title: Metabake versus Gulp and Grunt
+pageTitle: MetaBake - MetaBake versus Gulp and Grunt
+title: MetaBake versus Gulp and Grunt
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
-content_text: Metabake is very easy to get started with; there are no hassles involved, trying to get going…not so easy with Gulp and Grunt
-comment: Metabake offers a great compatibility for a browser, with the enhanced drag and drop components…not so easy with Gulp and Grunt
-keywords: Metabake versus Gulp, Metabake versus Grunt, gulp, grunt
+content_text: MetaBake is very easy to get started with; there are no hassles involved, trying to get going…not so easy with Gulp and Grunt
+comment: MetaBake offers a great compatibility for a browser, with the enhanced drag and drop components…not so easy with Gulp and Grunt
+keywords: MetaBake versus Gulp, MetaBake versus Grunt, gulp, grunt
