--- a/meta-website/map.yaml
+++ b/meta-website/map.yaml
@@ -1,13 +1,13 @@
-host: 'https://www.metabake.org'
+host: 'https://www.MetaBake.org'
 
 changefreq: monthly
 
 menu:
-   - Why Metabake:
-      - Why Metabake: /why-metabake/why-metabake
-      - Metabake vs. Other Low Code: /why-metabake/metabake-vs-other-low-code
-      - Metabake vs. Hugo: /why-metabake/metabake-vs-hugo
-      - Metabake vs. Gulp and Grunt: /why-metabake/metabake-vs-gulp-and-grunt
+   - Why MetaBake:
+      - Why MetaBake: /why-MetaBake/why-MetaBake
+      - MetaBake vs. Other Low Code: /why-MetaBake/MetaBake-vs-other-low-code
+      - MetaBake vs. Hugo: /why-MetaBake/MetaBake-vs-hugo
+      - MetaBake vs. Gulp and Grunt: /why-MetaBake/MetaBake-vs-gulp-and-grunt
    - Who Benefits: /who-benefits
    - Get Started: /get-started
    - About:
