--- a/meta-website/who-benefits/dat.yaml
+++ b/meta-website/who-benefits/dat.yaml
@@ -3,10 +3,10 @@ basedir: ../
 pretty: false
 home: ''
 
-pageTitle: Metabake - Who Benefits
+pageTitle: MetaBake - Who Benefits
 title: Who Benefits?
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
-content_text: Metabake comes with many features and benefits for various individuals in the technology field and more specifically as it relates to and involves application development, either for desktop web or for mobile compatibility.
+content_text: MetaBake comes with many features and benefits for various individuals in the technology field and more specifically as it relates to and involves application development, either for desktop web or for mobile compatibility.
 comment: It offers exclusive benefit of interest to new web or software developers, technological officers, lead technologists, vice presidents of engineering departments, and other users of the productive, output interface.
-keywords: Metabake benefits, Metabake low-code benefits
+keywords: MetaBake benefits, MetaBake low-code benefits
