--- a/meta-website/about/vic-cekvenich/dat.yaml
+++ b/meta-website/about/vic-cekvenich/dat.yaml
@@ -3,10 +3,10 @@ basedir: ../../
 pretty: false
 home: ''
 
-pageTitle: MetaBake - Victor Cekvenich
+pageTitle: Victor Cekvenich
 title: Who is Victor Cekvenich?
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
 content_text: Software engineer and visionary...
-comment: Victor is the founder of MetaBake and a seasoned technology executive with experience with large-scale software development, team building, low-code development, network programming, practical approach to architecture, agile, CMS, distributed/network computing HTML5, CSS, node, mobile, Java, API, product, and a sought-after speaker.
+content_text: Victor is the founder of MetaBake and a seasoned technology executive with experience with large-scale software development, team building, low-code development, network programming, practical approach to architecture, agile, CMS, distributed/network computing HTML5, CSS, node, mobile, Java, API, product, and a sought-after speaker.
 keywords: Victor Cekvenich, low-code development, founder of MetaBake
