--- a/meta-website/legal/privacy/dat.yaml
+++ b/meta-website/legal/privacy/dat.yaml
@@ -3,10 +3,10 @@ basedir: ../../
 pretty: false
 home: ''
 
-pageTitle: MetaBake - Privacy
+pageTitle: Privacy
 title: Privacy Policy
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
 content_text: MetaBake (“MetaBake” “we” “us” or “our”) operates a website located at www.MetaBake.org (the “website”) from which users can gather information concerning news and services provided by MetaBake. This MetaBake Privacy Policy (“Privacy Policy”) covers our treatment of personally identifiable information that we collect when you access the website.
-comment: Last Updated January 1, 2019
+content_text: Last Updated January 1, 2019
 keywords: MetaBake Privacy
