--- a/meta-website/ZDOC/dat.yaml
+++ b/meta-website/ZDOC/dat.yaml
@@ -2,7 +2,7 @@ basedir: ../
 
 pretty: true
 
-pageTitle: MetaBake - About Us
+pageTitle: About Us
 title: MetaBake is the extensible low-code productivity tool that simplifies the process for building great software
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
