--- a/meta-website/download/dat.yaml
+++ b/meta-website/download/dat.yaml
@@ -3,10 +3,10 @@ basedir: ../
 pretty: false
 home: ''
 
-pageTitle: MetaBake - Download
+pageTitle: Download
 title: Download 10 Pillars Related to Low-Code
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
 content_text: 10 Pillars Related to Low-Code
-comment: 10 Pillars Related to Low-Code
+content_text: 10 Pillars Related to Low-Code
 keywords: 10 Pillars Related to Low-Code, 10 Pillars MetaBake
