--- a/meta-website/landing/metabake-vs-other-low-code/dat.yaml
+++ b/meta-website/landing/metabake-vs-other-low-code/dat.yaml
@@ -1,12 +1,11 @@
 basedir: ../../
 
 pretty: false
-home: 'home'
 
-pageTitle: MetaBake - MetaBake versus Other Low-Code Platforms
+
+pageTitle: MetaBake versus Other Low-Code Platforms
 title: MetaBake versus Other Low-Code Platforms
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
-content_text: MetaBake is a low-code programming for static generation such as Markdown, Pugs, etc. with an inclusion of dynamic data binding.
-comment: MetaBake, or mBake, as some prefer to call it, is specifically built and customized for developers; it is not a gui. We give the chance to let you use a text editor to build your content and code in a more customized build that is suitable for your usability. It enhances front-end software app development.
+content_text: MetaBake is the open source extensible low-code productivity tool for programmers.
 keywords: MetaBake versus, Low-Code Platforms
