--- a/meta-website/about/contact/dat.yaml
+++ b/meta-website/about/contact/dat.yaml
@@ -3,7 +3,7 @@ basedir: ../../
 pretty: false
 home: ''
 
-pageTitle: Contact Us
+title: Contact Us
 title: Lorem Ipsum
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
