--- a/meta-website/about/support/dat.yaml
+++ b/meta-website/about/support/dat.yaml
@@ -3,7 +3,7 @@ basedir: ../../
 pretty: false
 home: ''
 
-pageTitle: Support
+title: Support
 title: For inquiries, support and custom requests, we would love to have you reach out to us and we will be available to chat with you.
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
