--- a/meta-website/about/vic-cekvenich/dat.yaml
+++ b/meta-website/about/vic-cekvenich/dat.yaml
@@ -3,7 +3,7 @@ basedir: ../../
 pretty: false
 home: ''
 
-pageTitle: Victor Cekvenich
+title: Victor Cekvenich
 title: Who is Victor Cekvenich?
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
