--- a/meta-website/landing/why-metabake/dat.yaml
+++ b/meta-website/landing/why-metabake/dat.yaml
@@ -2,9 +2,8 @@ basedir: ../
 
 pretty: true
 
-pageTitle: About Us
-title: MetaBake is the extensible low-code productivity tool that simplifies the process for building great software
+title: Why MetaBake?
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
-content_text:MetaBake is the open source extensible low-code productivity tool for programmers.
+content_text: MetaBake is the open source extensible low-code productivity tool for programmers.
 keywords: low-code, building, software
