--- a/meta-website/legal/privacy/dat.yaml
+++ b/meta-website/legal/privacy/dat.yaml
@@ -3,7 +3,7 @@ basedir: ../../
 pretty: false
 home: ''
 
-pageTitle: Privacy
+title: Privacy
 title: Privacy Policy
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
