--- a/meta-website/who-benefits/dat.yaml
+++ b/meta-website/who-benefits/dat.yaml
@@ -3,7 +3,7 @@ basedir: ../
 pretty: false
 home: ''
 
-pageTitle: Who Benefits
+title: Who Benefits
 title: Who Benefits?
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
