--- a/meta-website/download/dat.yaml
+++ b/meta-website/download/dat.yaml
@@ -3,7 +3,7 @@ basedir: ../
 pretty: false
 home: ''
 
-pageTitle: Download
+title: Download
 title: Download 10 Pillars Related to Low-Code
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
