--- a/meta-website/get-started/dat.yaml
+++ b/meta-website/get-started/dat.yaml
@@ -3,7 +3,7 @@ basedir: ../
 pretty: false
 home: ''
 
-pageTitle: Get Started
+title: Get Started
 title: MetaBake is the extensible low-code productivity tool that simplifies the process for building great software.
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
