--- a/meta-website/legal/terms/dat.yaml
+++ b/meta-website/legal/terms/dat.yaml
@@ -3,7 +3,7 @@ basedir: ../../
 pretty: false
 home: ''
 
-pageTitle: Terms
+title: Terms
 title: Terms of Use
 image: >-
   http://www.MetaBake.org/assets/img/slide-3.jpg
