--- a/doc/_doc2/mkdocs.yml
+++ b/doc/_doc2/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: SPA Docs
-site_url: http://MetaBake.org
-repo_url: http://MetaBake.org
+site_url: http://mBake.org
+repo_url: http://mBake.org
 pages:
    - Home/ B.M.: index.md
 
