--- a/meta-website/legal/privacy/dat.yaml
+++ b/meta-website/legal/privacy/dat.yaml
@@ -5,5 +5,5 @@ pretty: false
 title: Privacy Policy
 image: >-
   http://mBake.org/assets/img/slide-3.jpg
-content_text: MetaBake (“MetaBake” “we” “us” or “our”) operates a website located at www.mBake.org (the “website”) from which users can gather information concerning news and services provided by MetaBake. This MetaBake Privacy Policy (“Privacy Policy”) covers our treatment of personally identifiable information that we collect when you access the website.
+content_text: MetaBake (“MetaBake” “we” “us” or “our”) operates a website located at mBake.org (the “website”) from which users can gather information concerning news and services provided by MetaBake. This MetaBake Privacy Policy (“Privacy Policy”) covers our treatment of personally identifiable information that we collect when you access the website.
 keywords: MetaBake Privacy
