--- a/docsSrc/mkdocs.yml
+++ b/docsSrc/mkdocs.yml
@@ -4,9 +4,11 @@ nav:
    - Home: index.md
 
    - Tutorial 1 - Setup S3 and mount: t1.md
-   - Tutorial 2 - Learn Templating/Pug: t2.md
-   - Tutorial 3 - Generate a website: t3.md
-   - Tutorial 4 - Generate a CRUD webapp: t4.md
+   - Tutorial 2 - Mount S3 bucket via goofys using CodeAnywhere editor and Digital Ocean Linux box: ca.md
+   - Tutorial 3 - Install the tools for developing to linux box via CA: ca_install.md
+   - Tutorial 4 - Learn Templating/Pug: t2.md
+   - Tutorial 5 - Generate a website: t3.md
+   - Tutorial 6 - Generate a CRUD webapp: t4.md
 
    - Resources: res.md
    - About: about.md
