--- a/docsSrc/mkdocs.yml
+++ b/docsSrc/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
    - Generate a serverless CRUD webapp: crud.md
    - Simple CRUD example app and ViewModel+Bind: model.md
    - Design: design.md
+   - Blog: blog.md
 
    - Resources: res.md
    - About: about.md
