--- a/docsSrc/mkdocs.yml
+++ b/docsSrc/mkdocs.yml
@@ -7,7 +7,7 @@ nav:
    - Mount S3 to linux box via goofys and CA: ca.md
    - Learn Templating/Pug: pug_static_data.md
    - Spectre SCSS Theme Framework and SCSS: spectre_n_scss.md
-   - dynamic databinding: dynamic_data_binding.md
+   - Dynamic databinding: dynamic_data_binding.md
    - Generate a serverless CRUD webapp: crud.md
    - Simple CRUD example app and ViewModel+Bind: model.md
    - Design: design.md
