--- a/mbake-blog/posts/post-2/dat.yaml
+++ b/mbake-blog/posts/post-2/dat.yaml
@@ -9,4 +9,5 @@ subtitle: Introducing Evelin. Creative UI Kit template for Webflow
 paragraph_1: The rich text element allows you to create and format headings, paragraphs, block-quotes, images, and video all in one place instead of having to add and format them individually. Just double-click and easily create content.
 paragraph_2: For dynamic content, add a rich text field to any collection and then connect a rich text element to that field in the settings panel. Headings, paragraphs, block-quotes, figures, images, and figure captions can all be styled.
 color: '#2281e9'
+topic: branding
 publish1: true
