--- a/mbake-blog/posts/post-1/dat.yaml
+++ b/mbake-blog/posts/post-1/dat.yaml
@@ -2,12 +2,12 @@ basedir: ../../
 
 ROOT: '/'
 
-title: 7 Must Have Tools For Web Designers
+title: Lorem ipsum dolor sit amet
 date: August 6, 2018
-img_url: /assets/img/blog/item-1.jpg
-subtitle: Introducing Evelin. Creative UI Kit template for Webflow
-paragraph_1: The rich text element allows you to create and format headings, paragraphs, block-quotes, images, and video all in one place instead of having to add and format them individually. Just double-click and easily create content.
-paragraph_2: For dynamic content, add a rich text field to any collection and then connect a rich text element to that field in the settings panel. Headings, paragraphs, block-quotes, figures, images, and figure captions can all be styled.
+img_url: /assets/img/item-1.jpg
+subtitle: Lorem ipsum dolor sit amet, consectetur adipisicing elit
+paragraph_1: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+paragraph_2: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 color: '#35c52f'
 topic: design
 publish1: true
