--- a/mbake-blog/posts/post-5/dat.yaml
+++ b/mbake-blog/posts/post-5/dat.yaml
@@ -8,4 +8,7 @@ image:  /assets/img/item-5.jpg
 summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit
 content_text: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
 tags: art work
+
+publishDate: 1552577185
+publishOrder: 5
 publish: true
