--- a/meta-website/map.yaml
+++ b/meta-website/map.yaml
@@ -1,22 +1,4 @@
-host: 'https://mBake.org'
+host: 'https://www.mBake.org'
 
 changefreq: monthly
 
-menu:
-   - Why MetaBake:
-      - Why MetaBake: /why-MetaBake/why-MetaBake
-      - MetaBake vs. Other low-code: /why-MetaBake/MetaBake-vs-other-low-code
-      - MetaBake vs. Hugo: /why-MetaBake/MetaBake-vs-hugo
-      - MetaBake vs. Gulp and Grunt: /why-MetaBake/MetaBake-vs-gulp-and-grunt
-   - Who Benefits: /who-benefits
-   - Get Started: /get-started
-   - About:
-      - About us: /about/about
-      - Victor Cekvenich: /about/vic-cekvenich
-      - support: /about/support
-      - contact us: /about/contact
-   - Terms of Use: /terms
-   - Privacy: /privacy
-   - Contact us: /about/contact
-
-itemsRoot: /landing
