--- a/docsSrc/mkdocs.yml
+++ b/docsSrc/mkdocs.yml
@@ -7,8 +7,9 @@ nav:
    - TypeScript|.js and Services: ts.md
    - Website with loading .js libs example: webs.md
 
-   - SEO and Social tags SEO: SEO.md 
-   - Dynamic data/CRUD example/'ViewModel': crud.md Table, Forms, FireStore|DreamFactory and Validation, Auth
+   - SEO and social tags SEO: SEO.md 
+   - Dynamic data/CRUD/'ViewModel': crud.md 
+
    - Blog/Itemize example: itemize.md (CMS)
  
    - Review and next Steps: next.md CMS, AMP, Reusable Components, SPA router, Shared Cloud IDE
