--- a/docsSrc/mkdocs.yml
+++ b/docsSrc/mkdocs.yml
@@ -5,15 +5,14 @@ nav:
    - HTML/Pug and dat.yaml: pug.md
    - SCSS|CSS: css.md
    - TypeScript|.js and Services: ts.md
-   - Website with loading .js libs example: webs.md
+   - Website w/ loading .js libs example: webs.md
 
    - SEO and social tags SEO: SEO.md 
-   - Dynamic data/CRUD/'ViewModel': crud.md 
+   - Dynamic data/CRUD/'ViewModel' example: crud.md 
 
-   - Blog/Itemize example: itemize.md (CMS)
- 
-   - Review and next Steps: next.md CMS, AMP, Reusable Components, SPA router, Shared Cloud IDE
-   - Bonus - MetaCAKE plugins/components for designers: metaCake.md
+   - Blog/Itemize example: itemize.md
+
+   - mbake review, extras and next steps: more.md
    - Resources: res.md
 
 theme: readthedocs
