--- a/site/pg/examples/dat.yaml
+++ b/site/pg/examples/dat.yaml
@@ -1,4 +1,4 @@
-basedir: ../
+basedir: ../../
 
 pretty: false
 title: INTUITION.DEV is open source and extensible low-code productivity tool for front-end developers
