--- a/site/landing/low/dat.yaml
+++ b/site/landing/low/dat.yaml
@@ -1,4 +1,9 @@
 basedir: '../../'
 
-
 pretty: true
+
+title: Open source low-code tool for professional developers
+
+description: INTUITION.DEV is the futuristic open source tool for pro developers w/ 10 fold productivity via automation, low-code, cross-platform, static-generator, and a built-in WebAdmin editor - facilitating app maintenance by end-users.
+
+
