--- a/site/landing/low/dat.yaml
+++ b/site/landing/low/dat.yaml
@@ -6,4 +6,7 @@ title: Open source low-code tool for professional developers
 
 description: INTUITION.DEV is the futuristic open source tool for pro developers w/ 10 fold productivity via automation, low-code, cross-platform, static-generator, and a built-in WebAdmin editor - facilitating app maintenance by end-users.
 
-
+#sitemap
+# options: https://github.com/ekalinin/sitemap.js
+priority: 0.9
+changefreq: monthly
