--- a/site/landing/low/dat.yaml
+++ b/site/landing/low/dat.yaml
@@ -2,10 +2,9 @@ basedir: '../../'
 
 pretty: true
 
-title: Open source low-code tool for professional developers
+title: Open source low-code tool for professional developers based on JAMstack
 
-description: INTUITION.DEV is the futuristic open source tool for pro developers w/ 10 fold productivity via automation, low-code, cross-platform, static-generator, and a built-in WebAdmin editor - facilitating app maintenance by end-users.
-
+description: INTUITION.DEV is the futuristic open source tool for pro developers with 10-fold productivity via automation, low-code, cross-platform, static-generator, and a built-in WebAdmin editor, leveraging JAMstack and facilitating app maintenance by end-users.
 #sitemap
 # options: https://github.com/ekalinin/sitemap.js
 priority: 0.9
