--- a/tut/layout/custels/fraglist/dat.yaml
+++ b/tut/layout/custels/fraglist/dat.yaml
@@ -17,7 +17,7 @@ frags:
     title:  And neither does this bloody franchise.
     source: arc.mp4
   -
-    title: Trump's presidential campaign announcement speech.
+    title: Trump's presidential campaign announcement speech. Trump's presidential campaign announcement speech. 
     source: arc.mp4
   -
     title:  He decimated the Burmese military machine.
