--- a/5625/layout/custels/fraglist/dat.yaml
+++ b/5625/layout/custels/fraglist/dat.yaml
@@ -15,55 +15,55 @@ tags: trump, politics,
 frags:
   -
     title:  And neither does this bloody franchise.
-    source: arc.mp4
+    src: arc.mp4
   -
     title: Trump's presidential campaign announcement speech. Trump's presidential campaign announcement speech. 
-    source: arc.mp4
+    src: arc.mp4
   -
     title:  He decimated the Burmese military machine.
-    source: arc.mp4
+    src: arc.mp4
   -
     title: Stallone endows Rambo with mortality.
-    source: arc.mp4
+    src: arc.mp4
   -
     title:  Movie was rather thoughtful and complex.
-    source: arc.mp4
+    src: arc.mp4
   -
     title: Stallone wanted to go beyond the very.
-    source: arc.mp4
+    src: arc.mp4
   -
     title:  And neither does this bloody franchise.
-    source: arc.mp4
+    src: arc.mp4
   -
     title: Trump's presidential campaign announcement speech.
-    source: arc.mp4
+    src: arc.mp4
   -
     title:  He decimated the Burmese military machine.
-    source: arc.mp4
+    src: arc.mp4
   -
     title: Stallone endows Rambo with mortality.
-    source: arc.mp4
+    src: arc.mp4
   -
     title:  Movie was rather thoughtful and complex.
-    source: arc.mp4
+    src: arc.mp4
   -
     title: Stallone wanted to go beyond the very.
-    source: arc.mp4
+    src: arc.mp4
   -
     title:  And neither does this bloody franchise.
-    source: arc.mp4
+    src: arc.mp4
   -
     title: Trump's presidential campaign announcement speech.
-    source: arc.mp4
+    src: arc.mp4
   -
     title:  He decimated the Burmese military machine.
-    source: arc.mp4
+    src: arc.mp4
   -
     title: Stallone endows Rambo with mortality.
-    source: arc.mp4
+    src: arc.mp4
   -
     title:  Movie was rather thoughtful and complex.
-    source: arc.mp4
+    src: arc.mp4
   -
     title: Stallone wanted to go beyond the very.
-    source: arc.mp4
+    src: arc.mp4
