--- a/5625/items/3/dat.yaml
+++ b/5625/items/3/dat.yaml
@@ -3,7 +3,7 @@ basedir: ../../
 
 title: Rambo - Last Blood
 desc: Rambo must confront his past and unearth his ruthless combat skills to exact revenge in a final mission.
-img: img.jpg
+img: who.jpg
 featuring: Rambo
 
 year: 2009
