--- a/5625/items/custels/fraglist/dat.yaml
+++ b/5625/items/custels/fraglist/dat.yaml
@@ -1,6 +1,8 @@
 pretty: true
 basedir: ../../../
 
+publish: false
+
 title: Rambo - Last Blood
 desc: Rambo must confront his past and unearth his ruthless combat skills to exact revenge in a final mission.
 img: img.jpg
