--- a/site/landing/low/dat.yaml
+++ b/site/landing/low/dat.yaml
@@ -4,7 +4,7 @@ pretty: true
 
 title: Open source low-code tool for professional developers based on JAMstack, w/ Pug
 
-description: INTUITION.DEV is the futuristic open source tool for pro developers with 10-fold productivity via automation, low-code, cross-platform, static-generator, and a built-in WebAdmin editor, leveraging JAMstack, w/ Pug and facilitating app maintenance by end-users.
+description: INTU.DEV is the futuristic open source tool for pro developers with 10-fold productivity via automation, low-code, cross-platform, static-generator, and a built-in WebAdmin editor, leveraging JAMstack, w/ Pug and facilitating app maintenance by end-users.
 #sitemap
 # options: https://github.com/ekalinin/sitemap.js
 priority: 0.9
